// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Asset Matching ActionsToolbox 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  margin-top: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-right: 0.5rem;
}

.emotion-4>button {
  border: none;
}

.emotion-5 {
  font-size: 1rem;
  font-weight: 500;
  color: #3e3e3e;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(62,62,62,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-5:hover,
.emotion-5:focus {
  background-color: rgba(62,62,62,0.1);
}

.emotion-5:active {
  background-color: rgba(62,62,62,0.2);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: inherit;
  width: 1rem;
  height: 1rem;
}

.emotion-9 path {
  fill: inherit;
}

.emotion-10 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-18 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-19 {
  margin-right: 0.5rem;
}

.emotion-19>button {
  border: none;
}

.emotion-20 {
  font-size: 1rem;
  font-weight: 500;
  width: 2.875rem;
  color: #000;
  background-color: transparent;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: solid 1px rgba(0,0,0,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-20:hover,
.emotion-20:focus {
  background-color: rgba(0,0,0,0.1);
}

.emotion-20:active {
  background-color: rgba(0,0,0,0.2);
}

.emotion-22 {
  fill: #000;
  width: 1rem;
  height: 1rem;
}

.emotion-22 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <h2>
      ⬇️Toolbox for actions can be used separately for handling bulk actions⬇️
    </h2>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
          data-testid="primary_action"
        >
          <button
            className="emotion-5"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-6"
            >
              <span
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
              <span
                className="emotion-10"
              >
                Confirm
              </span>
            </span>
          </button>
        </div>
        <div
          className="emotion-4"
          data-testid="primary_action"
        >
          <button
            className="emotion-5"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="emotion-6"
            >
              <span
                className="emotion-7"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
              <span
                className="emotion-10"
              >
                Reject
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        role="button"
      >
        <div
          className="emotion-18"
        >
          <div
            className="emotion-19"
          >
            <button
              className="emotion-20"
              data-testid="icon-button-menu_btn"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-22"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Asset Matching AssetMatching 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  margin-bottom: 0.625rem;
  margin-right: 0.625rem;
}

.emotion-2 {
  margin-bottom: 0.625rem;
  margin-left: 0.625rem;
}

.emotion-4>div {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-radius: 0.5rem;
  border: 1px solid #e7e7e7;
}

.emotion-4 .selected {
  background: #c8cade;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-6 {
  padding: 0.5rem;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  background: white;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0px 2px 4px rgba(0 0 0 / 15%);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-9:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-10 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-10+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-10+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #cfcfcf;
  border-radius: 0.125rem;
}

.emotion-10:disabled+label {
  cursor: not-allowed;
}

.emotion-11 span {
  padding: 0;
}

.emotion-11 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-12 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-13 {
  fill: #c8cade;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-13 path {
  fill: #c8cade;
}

.emotion-15 {
  font-size: 1.625rem;
  font-weight: 700;
  margin: 0 0.5rem 0 1rem;
  color: black;
}

.emotion-16 {
  font-size: 0.6875rem;
  font-weight: 500;
  color: #676767;
  margin-right: 0.5rem;
}

.emotion-17 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-18 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-19 {
  margin-right: 0.5rem;
}

.emotion-19>button {
  border: none;
}

.emotion-20 {
  font-size: 1rem;
  font-weight: 500;
  color: #3e3e3e;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(62,62,62,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-20:hover,
.emotion-20:focus {
  background-color: rgba(62,62,62,0.1);
}

.emotion-20:active {
  background-color: rgba(62,62,62,0.2);
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-24 {
  fill: inherit;
  width: 1rem;
  height: 1rem;
}

.emotion-24 path {
  fill: inherit;
}

.emotion-25 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-33 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-34 {
  margin-right: 0.5rem;
}

.emotion-34>button {
  border: none;
}

.emotion-35 {
  font-size: 1rem;
  font-weight: 500;
  width: 2.875rem;
  color: #000;
  background-color: transparent;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: solid 1px rgba(0,0,0,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-35:hover,
.emotion-35:focus {
  background-color: rgba(0,0,0,0.1);
}

.emotion-35:active {
  background-color: rgba(0,0,0,0.2);
}

.emotion-37 {
  fill: #000;
  width: 1rem;
  height: 1rem;
}

.emotion-37 path {
  fill: #000;
}

.emotion-38 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  padding: 1rem;
}

.emotion-39 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: transparent;
  padding: 1rem;
  border: 1px solid #e7e7e7;
  border-radius: 0.25rem;
}

.emotion-39:first-of-type {
  margin-right: 1rem;
}

.emotion-40 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-41 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-42 {
  font-size: 0.6875rem;
  font-weight: 500;
  color: #676767;
  margin: 0;
  font-style: italic;
}

.emotion-43 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-45 {
  fill: #232d7d;
  width: 1rem;
  height: 1rem;
}

.emotion-45 path {
  fill: #232d7d;
}

.emotion-46 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-47 {
  color: #232d7d;
  font-size: 1rem;
  font-weight: 700;
  margin: 0.5rem 0;
  cursor: default;
}

.emotion-48 {
  font-size: 0.6875rem;
  font-weight: 500;
  color: #676767;
  margin: 0;
}

.emotion-49 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-50 {
  font-size: 1rem;
  font-weight: 700;
  color: #676767;
  margin: 0;
}

.emotion-51 {
  font-size: 1rem;
  font-weight: 700;
  padding: 0.25rem;
  color: #232d7d;
  background: #c8cade;
  border-radius: 0.25rem;
  margin-left: 1.5rem;
}

.emotion-52 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-53 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-54 {
  font-size: 0.6875rem;
  margin-right: 2rem;
  color: #232d7d;
}

.emotion-55 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-56 {
  font-size: 0.75rem;
  font-weight: 500;
  color: black;
  margin: 0.25rem;
  padding: 0.25rem;
  cursor: default;
  background: #e7e7e7;
  white-space: nowrap;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.emotion-57 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-61 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #f3f3f3;
  padding: 1rem;
  border: 1px solid #e7e7e7;
  border-radius: 0.25rem;
}

.emotion-61:first-of-type {
  margin-right: 1rem;
}

.emotion-68 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-68:hover {
  -webkit-transition: text-decoration 0.2s ease-in-out;
  -moz-transition: text-decoration 0.2s ease-in-out;
  -ms-transition: text-decoration 0.2s ease-in-out;
  -o-transition: text-decoration 0.2s ease-in-out;
  -webkit-transition: text-decoration 0.2s ease-in-out;
  transition: text-decoration 0.2s ease-in-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #232d7d;
}

.emotion-68:hover a {
  display: block;
}

.emotion-70 {
  background: transparent;
}

.emotion-70 .tippy-content {
  color: #000;
  background-color: #dbdbdb;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: justify;
}

.emotion-70 .tippy-arrow {
  color: #dbdbdb;
}

.emotion-71 {
  display: none;
  margin: auto 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-71:hover>span>svg>path {
  -webkit-transition: fill 0.2s ease-in-out;
  -moz-transition: fill 0.2s ease-in-out;
  -ms-transition: fill 0.2s ease-in-out;
  -o-transition: fill 0.2s ease-in-out;
  -webkit-transition: fill 0.2s ease-in-out;
  transition: fill 0.2s ease-in-out;
  fill: black;
}

.emotion-73 {
  fill: #676767;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-73 path {
  fill: #676767;
}

.emotion-83 {
  font-size: 0.75rem;
  font-weight: 500;
  color: black;
  margin: 0.25rem;
  padding: 0.25rem;
  cursor: default;
  background: transparent;
  white-space: nowrap;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <button
      className="emotion-1"
      onClick={[Function]}
    >
      add action
    </button>
    <button
      onClick={[Function]}
    >
      clear actions
    </button>
    <button
      className="emotion-2"
      onClick={[Function]}
    >
      reset actions
    </button>
    <button
      className="emotion-2"
      onClick={[Function]}
    >
      check from outside
    </button>
    <section
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <header
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            <span
              className="emotion-8"
            >
              <span
                className="emotion-9"
                onClick={[Function]}
              >
                <input
                  checked={false}
                  className="emotion-10"
                  data-testid="checkbox"
                  disabled={false}
                  id="styled-checkbox-"
                  onChange={[Function]}
                  onClick={[Function]}
                  type="checkbox"
                />
                <label
                  className="emotion-11"
                  htmlFor="styled-checkbox-"
                >
                  <span
                    className="emotion-12"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-13"
                    />
                  </span>
                </label>
              </span>
            </span>
            <div
              className="emotion-7"
            >
              <span
                className="emotion-15"
              >
                95%
              </span>
              <span
                className="emotion-16"
              >
                Probability
                <br />
                 Score
              </span>
            </div>
          </div>
          <div
            className="emotion-17"
          >
            <div
              className="emotion-18"
            >
              <div
                className="emotion-19"
                data-testid="primary_action"
              >
                <button
                  className="emotion-20"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="emotion-21"
                  >
                    <span
                      className="emotion-22"
                    >
                      <span
                        className="emotion-12"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-24"
                        />
                      </span>
                    </span>
                    <span
                      className="emotion-25"
                    >
                      Confirm
                    </span>
                  </span>
                </button>
              </div>
              <div
                className="emotion-19"
                data-testid="primary_action"
              >
                <button
                  className="emotion-20"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                >
                  <span
                    className="emotion-21"
                  >
                    <span
                      className="emotion-22"
                    >
                      <span
                        className="emotion-12"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-24"
                        />
                      </span>
                    </span>
                    <span
                      className="emotion-25"
                    >
                      Reject
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              role="button"
            >
              <div
                className="emotion-33"
              >
                <div
                  className="emotion-34"
                >
                  <button
                    className="emotion-35"
                    data-testid="icon-button-menu_btn"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-12"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-37"
                      />
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </header>
        <div
          className="emotion-38"
        >
          <article
            className="emotion-39"
          >
            <div
              className="emotion-40"
            >
              <div
                className="emotion-41"
              >
                <p
                  className="emotion-42"
                >
                  Owned Recording
                </p>
                <div
                  className="emotion-43"
                >
                  <span
                    className="emotion-12"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-45"
                    />
                  </span>
                  <div
                    className="emotion-46"
                  >
                    <h3
                      className="emotion-47"
                    >
                      Too Funky
                    </h3>
                  </div>
                </div>
                <p
                  className="emotion-48"
                >
                  ISWC: KS39729323
                </p>
              </div>
              <div
                className="emotion-49"
              >
                <p
                  className="emotion-50"
                >
                  Linked Sound 
                  <br />
                   Recordings
                </p>
                <span
                  className="emotion-51"
                >
                  234
                </span>
              </div>
            </div>
            <div
              className="emotion-52"
            >
              <div
                className="emotion-53"
              >
                <h4
                  className="emotion-54"
                >
                  Artists
                </h4>
                <div
                  className="emotion-55"
                >
                  <p
                    className=" emotion-56"
                    data-itemid="george-michael"
                    data-testid="george-michael"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    George Michael
                  </p>
                </div>
              </div>
              <div
                className="emotion-57"
              >
                <h4
                  className="emotion-54"
                >
                  Writers
                </h4>
                <div
                  className="emotion-55"
                >
                  <p
                    className=" emotion-56"
                    data-itemid="george-michael"
                    data-testid="george-michael"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    George Michael
                  </p>
                </div>
              </div>
            </div>
          </article>
          <article
            className="emotion-61"
          >
            <div
              className="emotion-40"
            >
              <div
                className="emotion-41"
              >
                <p
                  className="emotion-42"
                >
                  Owned Composition
                </p>
                <div
                  className="emotion-43"
                >
                  <span
                    className="emotion-12"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-45"
                    />
                  </span>
                  <div
                    className="emotion-68"
                  >
                    <h3
                      className="emotion-47"
                    >
                      Waiting for That Day
                    </h3>
                    <div
                      className="emotion-70"
                      data-testid="external-link-tooltip"
                      placement="right"
                    >
                      <a
                        className="emotion-71"
                        href="https://www.orfium.com"
                        rel="noreferrer"
                        target="_blank"
                      >
                        <span
                          className="emotion-12"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-73"
                          />
                        </span>
                      </a>
                    </div>
                    <div>
                      Open asset in MRC
                    </div>
                  </div>
                </div>
                <p
                  className="emotion-48"
                >
                  ISWC: KS39729323
                </p>
              </div>
              <div
                className="emotion-49"
              >
                <p
                  className="emotion-50"
                >
                  Linked Sound 
                  <br />
                   Recordings
                </p>
                <span
                  className="emotion-51"
                >
                  234
                </span>
              </div>
            </div>
            <div
              className="emotion-52"
            >
              <div
                className="emotion-53"
              >
                <h4
                  className="emotion-54"
                >
                  Writers
                </h4>
                <div
                  className="emotion-55"
                >
                  <p
                    className=" emotion-56"
                    data-itemid="george-michael"
                    data-testid="george-michael"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    George Michael
                  </p>
                  <p
                    className=" emotion-83"
                    data-itemid="mick-jagger"
                    data-testid="mick-jagger"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    Mick Jagger
                  </p>
                  <p
                    className=" emotion-83"
                    data-itemid="keith-richards"
                    data-testid="keith-richards"
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                  >
                    Keith Richards
                  </p>
                </div>
              </div>
            </div>
          </article>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Design System/Asset Matching BulkActionsShowcase 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  margin-top: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: space-between;
  -webkit-box-align: space-between;
  -ms-flex-align: space-between;
  align-items: space-between;
  width: 100%;
  text-align: center;
}

.emotion-2 {
  padding: 0.5rem;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  background: transparent;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0px 0px 0px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-5:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-6 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-6+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-6+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #cfcfcf;
  border-radius: 0.125rem;
}

.emotion-6:disabled+label {
  cursor: not-allowed;
}

.emotion-7 span {
  padding: 0;
}

.emotion-7 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #c8cade;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-9 path {
  fill: #c8cade;
}

.emotion-11 {
  color: black;
}

.emotion-12 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13>div {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-radius: 0.5rem;
  border: 1px solid #e7e7e7;
}

.emotion-13 .selected {
  background: #c8cade;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-15 {
  padding: 0.5rem;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  background: white;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0px 2px 4px rgba(0 0 0 / 15%);
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.emotion-24 {
  font-size: 1.625rem;
  font-weight: 700;
  margin: 0 0.5rem 0 1rem;
  color: black;
}

.emotion-25 {
  font-size: 0.6875rem;
  font-weight: 500;
  color: #676767;
  margin-right: 0.5rem;
}

.emotion-27 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-28 {
  margin-right: 0.5rem;
}

.emotion-28>button {
  border: none;
}

.emotion-29 {
  font-size: 1rem;
  font-weight: 500;
  color: #3e3e3e;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: solid 1px rgba(62,62,62,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-29:hover,
.emotion-29:focus {
  background-color: rgba(62,62,62,0.1);
}

.emotion-29:active {
  background-color: rgba(62,62,62,0.2);
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-31 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-33 {
  fill: inherit;
  width: 1rem;
  height: 1rem;
}

.emotion-33 path {
  fill: inherit;
}

.emotion-34 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-42 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-43 {
  margin-right: 0.5rem;
}

.emotion-43>button {
  border: none;
}

.emotion-44 {
  font-size: 1rem;
  font-weight: 500;
  width: 2.875rem;
  color: #000;
  background-color: transparent;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: solid 1px rgba(0,0,0,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-44:hover,
.emotion-44:focus {
  background-color: rgba(0,0,0,0.1);
}

.emotion-44:active {
  background-color: rgba(0,0,0,0.2);
}

.emotion-46 {
  fill: #000;
  width: 1rem;
  height: 1rem;
}

.emotion-46 path {
  fill: #000;
}

.emotion-47 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: space-evenly;
  -ms-flex-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  justify-content: space-evenly;
  padding: 1rem;
}

.emotion-48 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: transparent;
  padding: 1rem;
  border: 1px solid #e7e7e7;
  border-radius: 0.25rem;
}

.emotion-48:first-of-type {
  margin-right: 1rem;
}

.emotion-49 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
}

.emotion-50 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-51 {
  font-size: 0.6875rem;
  font-weight: 500;
  color: #676767;
  margin: 0;
  font-style: italic;
}

.emotion-52 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-54 {
  fill: #232d7d;
  width: 1rem;
  height: 1rem;
}

.emotion-54 path {
  fill: #232d7d;
}

.emotion-55 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-56 {
  color: #232d7d;
  font-size: 1rem;
  font-weight: 700;
  margin: 0.5rem 0;
  cursor: default;
}

.emotion-57 {
  font-size: 0.6875rem;
  font-weight: 500;
  color: #676767;
  margin: 0;
}

.emotion-58 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.emotion-59 {
  font-size: 1rem;
  font-weight: 700;
  color: #676767;
  margin: 0;
}

.emotion-60 {
  font-size: 1rem;
  font-weight: 700;
  padding: 0.25rem;
  color: #232d7d;
  background: #c8cade;
  border-radius: 0.25rem;
  margin-left: 1.5rem;
}

.emotion-61 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-62 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-63 {
  font-size: 0.6875rem;
  margin-right: 2rem;
  color: #232d7d;
}

.emotion-64 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-65 {
  font-size: 0.75rem;
  font-weight: 500;
  color: black;
  margin: 0.25rem;
  padding: 0.25rem;
  cursor: default;
  background: #e7e7e7;
  white-space: nowrap;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.emotion-66 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-70 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #f3f3f3;
  padding: 1rem;
  border: 1px solid #e7e7e7;
  border-radius: 0.25rem;
}

.emotion-70:first-of-type {
  margin-right: 1rem;
}

.emotion-77 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-77:hover {
  -webkit-transition: text-decoration 0.2s ease-in-out;
  -moz-transition: text-decoration 0.2s ease-in-out;
  -ms-transition: text-decoration 0.2s ease-in-out;
  -o-transition: text-decoration 0.2s ease-in-out;
  -webkit-transition: text-decoration 0.2s ease-in-out;
  transition: text-decoration 0.2s ease-in-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #232d7d;
}

.emotion-77:hover a {
  display: block;
}

.emotion-79 {
  background: transparent;
}

.emotion-79 .tippy-content {
  color: #000;
  background-color: #dbdbdb;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: justify;
}

.emotion-79 .tippy-arrow {
  color: #dbdbdb;
}

.emotion-80 {
  display: none;
  margin: auto 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-80:hover>span>svg>path {
  -webkit-transition: fill 0.2s ease-in-out;
  -moz-transition: fill 0.2s ease-in-out;
  -ms-transition: fill 0.2s ease-in-out;
  -o-transition: fill 0.2s ease-in-out;
  -webkit-transition: fill 0.2s ease-in-out;
  transition: fill 0.2s ease-in-out;
  fill: black;
}

.emotion-82 {
  fill: #676767;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-82 path {
  fill: #676767;
}

.emotion-92 {
  font-size: 0.75rem;
  font-weight: 500;
  color: black;
  margin: 0.25rem;
  padding: 0.25rem;
  cursor: default;
  background: transparent;
  white-space: nowrap;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <h2>
      ⬇️Bulk actions Showcase⬇️
    </h2>
    <header
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <span
          className="emotion-4"
        >
          <span
            className="emotion-5"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-6"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-7"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
            </label>
          </span>
        </span>
        <div
          className="emotion-3"
        >
          <span
            className="emotion-11"
          >
            no items selected
          </span>
        </div>
      </div>
      <div
        className="emotion-12"
      >
        <button>
          Custom Action Element
        </button>
      </div>
    </header>
    <div
      style={
        Object {
          "marginTop": "0.625rem",
        }
      }
    >
      <div
        style={
          Object {
            "marginTop": "0.625rem",
          }
        }
      >
        <section
          className="emotion-13"
        >
          <div
            className="emotion-14"
          >
            <header
              className="emotion-15"
            >
              <div
                className="emotion-3"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                    onClick={[Function]}
                  >
                    <input
                      checked={false}
                      className="emotion-6"
                      data-testid="checkbox"
                      disabled={false}
                      id="styled-checkbox-"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <label
                      className="emotion-7"
                      htmlFor="styled-checkbox-"
                    >
                      <span
                        className="emotion-8"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-9"
                        />
                      </span>
                    </label>
                  </span>
                </span>
                <div
                  className="emotion-3"
                >
                  <span
                    className="emotion-24"
                  >
                    95%
                  </span>
                  <span
                    className="emotion-25"
                  >
                    Probability
                    <br />
                     Score
                  </span>
                </div>
              </div>
              <div
                className="emotion-12"
              >
                <div
                  className="emotion-27"
                >
                  <div
                    className="emotion-28"
                    data-testid="primary_action"
                  >
                    <button
                      className="emotion-29"
                      data-testid="button"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-30"
                      >
                        <span
                          className="emotion-31"
                        >
                          <span
                            className="emotion-8"
                            onClick={[Function]}
                          >
                            <span
                              className="emotion-33"
                            />
                          </span>
                        </span>
                        <span
                          className="emotion-34"
                        >
                          Confirm
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    className="emotion-28"
                    data-testid="primary_action"
                  >
                    <button
                      className="emotion-29"
                      data-testid="button"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-30"
                      >
                        <span
                          className="emotion-31"
                        >
                          <span
                            className="emotion-8"
                            onClick={[Function]}
                          >
                            <span
                              className="emotion-33"
                            />
                          </span>
                        </span>
                        <span
                          className="emotion-34"
                        >
                          Reject
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  role="button"
                >
                  <div
                    className="emotion-42"
                  >
                    <div
                      className="emotion-43"
                    >
                      <button
                        className="emotion-44"
                        data-testid="icon-button-menu_btn"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-46"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </header>
            <div
              className="emotion-47"
            >
              <article
                className="emotion-48"
              >
                <div
                  className="emotion-49"
                >
                  <div
                    className="emotion-50"
                  >
                    <p
                      className="emotion-51"
                    >
                      Owned Recording
                    </p>
                    <div
                      className="emotion-52"
                    >
                      <span
                        className="emotion-8"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-54"
                        />
                      </span>
                      <div
                        className="emotion-55"
                      >
                        <h3
                          className="emotion-56"
                        >
                          Too Funky
                        </h3>
                      </div>
                    </div>
                    <p
                      className="emotion-57"
                    >
                      ISWC: KS39729323
                    </p>
                  </div>
                  <div
                    className="emotion-58"
                  >
                    <p
                      className="emotion-59"
                    >
                      Linked Sound 
                      <br />
                       Recordings
                    </p>
                    <span
                      className="emotion-60"
                    >
                      234
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-61"
                >
                  <div
                    className="emotion-62"
                  >
                    <h4
                      className="emotion-63"
                    >
                      Artists
                    </h4>
                    <div
                      className="emotion-64"
                    >
                      <p
                        className=" emotion-65"
                        data-itemid="george-michael"
                        data-testid="george-michael"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        George Michael
                      </p>
                    </div>
                  </div>
                  <div
                    className="emotion-66"
                  >
                    <h4
                      className="emotion-63"
                    >
                      Writers
                    </h4>
                    <div
                      className="emotion-64"
                    >
                      <p
                        className=" emotion-65"
                        data-itemid="george-michael"
                        data-testid="george-michael"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        George Michael
                      </p>
                    </div>
                  </div>
                </div>
              </article>
              <article
                className="emotion-70"
              >
                <div
                  className="emotion-49"
                >
                  <div
                    className="emotion-50"
                  >
                    <p
                      className="emotion-51"
                    >
                      Owned Composition
                    </p>
                    <div
                      className="emotion-52"
                    >
                      <span
                        className="emotion-8"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-54"
                        />
                      </span>
                      <div
                        className="emotion-77"
                      >
                        <h3
                          className="emotion-56"
                        >
                          Waiting for That Day
                        </h3>
                        <div
                          className="emotion-79"
                          data-testid="external-link-tooltip"
                          placement="right"
                        >
                          <a
                            className="emotion-80"
                            href="https://www.orfium.com"
                            rel="noreferrer"
                            target="_blank"
                          >
                            <span
                              className="emotion-8"
                              onClick={[Function]}
                            >
                              <span
                                className="emotion-82"
                              />
                            </span>
                          </a>
                        </div>
                        <div>
                          Open asset in MRC
                        </div>
                      </div>
                    </div>
                    <p
                      className="emotion-57"
                    >
                      ISWC: KS39729323
                    </p>
                  </div>
                  <div
                    className="emotion-58"
                  >
                    <p
                      className="emotion-59"
                    >
                      Linked Sound 
                      <br />
                       Recordings
                    </p>
                    <span
                      className="emotion-60"
                    >
                      234
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-61"
                >
                  <div
                    className="emotion-62"
                  >
                    <h4
                      className="emotion-63"
                    >
                      Writers
                    </h4>
                    <div
                      className="emotion-64"
                    >
                      <p
                        className=" emotion-65"
                        data-itemid="george-michael"
                        data-testid="george-michael"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        George Michael
                      </p>
                      <p
                        className=" emotion-92"
                        data-itemid="mick-jagger"
                        data-testid="mick-jagger"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        Mick Jagger
                      </p>
                      <p
                        className=" emotion-92"
                        data-itemid="keith-richards"
                        data-testid="keith-richards"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        Keith Richards
                      </p>
                    </div>
                  </div>
                </div>
              </article>
            </div>
          </div>
        </section>
      </div>
      <div
        style={
          Object {
            "marginBottom": "0.625rem",
            "marginTop": "0.625rem",
          }
        }
      >
        <section
          className="emotion-13"
        >
          <div
            className="emotion-14"
          >
            <header
              className="emotion-15"
            >
              <div
                className="emotion-3"
              >
                <span
                  className="emotion-4"
                >
                  <span
                    className="emotion-5"
                    onClick={[Function]}
                  >
                    <input
                      checked={false}
                      className="emotion-6"
                      data-testid="checkbox"
                      disabled={false}
                      id="styled-checkbox-"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                    <label
                      className="emotion-7"
                      htmlFor="styled-checkbox-"
                    >
                      <span
                        className="emotion-8"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-9"
                        />
                      </span>
                    </label>
                  </span>
                </span>
                <div
                  className="emotion-3"
                >
                  <span
                    className="emotion-24"
                  >
                    95%
                  </span>
                  <span
                    className="emotion-25"
                  >
                    Probability
                    <br />
                     Score
                  </span>
                </div>
              </div>
              <div
                className="emotion-12"
              >
                <div
                  className="emotion-27"
                >
                  <div
                    className="emotion-28"
                    data-testid="primary_action"
                  >
                    <button
                      className="emotion-29"
                      data-testid="button"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-30"
                      >
                        <span
                          className="emotion-31"
                        >
                          <span
                            className="emotion-8"
                            onClick={[Function]}
                          >
                            <span
                              className="emotion-33"
                            />
                          </span>
                        </span>
                        <span
                          className="emotion-34"
                        >
                          Confirm
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    className="emotion-28"
                    data-testid="primary_action"
                  >
                    <button
                      className="emotion-29"
                      data-testid="button"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-30"
                      >
                        <span
                          className="emotion-31"
                        >
                          <span
                            className="emotion-8"
                            onClick={[Function]}
                          >
                            <span
                              className="emotion-33"
                            />
                          </span>
                        </span>
                        <span
                          className="emotion-34"
                        >
                          Reject
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  role="button"
                >
                  <div
                    className="emotion-42"
                  >
                    <div
                      className="emotion-43"
                    >
                      <button
                        className="emotion-44"
                        data-testid="icon-button-menu_btn"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-46"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </header>
            <div
              className="emotion-47"
            >
              <article
                className="emotion-48"
              >
                <div
                  className="emotion-49"
                >
                  <div
                    className="emotion-50"
                  >
                    <p
                      className="emotion-51"
                    >
                      Owned Recording
                    </p>
                    <div
                      className="emotion-52"
                    >
                      <span
                        className="emotion-8"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-54"
                        />
                      </span>
                      <div
                        className="emotion-55"
                      >
                        <h3
                          className="emotion-56"
                        >
                          Too Funky
                        </h3>
                      </div>
                    </div>
                    <p
                      className="emotion-57"
                    >
                      ISWC: KS39729323
                    </p>
                  </div>
                  <div
                    className="emotion-58"
                  >
                    <p
                      className="emotion-59"
                    >
                      Linked Sound 
                      <br />
                       Recordings
                    </p>
                    <span
                      className="emotion-60"
                    >
                      234
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-61"
                >
                  <div
                    className="emotion-62"
                  >
                    <h4
                      className="emotion-63"
                    >
                      Artists
                    </h4>
                    <div
                      className="emotion-64"
                    >
                      <p
                        className=" emotion-65"
                        data-itemid="george-michael"
                        data-testid="george-michael"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        George Michael
                      </p>
                    </div>
                  </div>
                  <div
                    className="emotion-66"
                  >
                    <h4
                      className="emotion-63"
                    >
                      Writers
                    </h4>
                    <div
                      className="emotion-64"
                    >
                      <p
                        className=" emotion-65"
                        data-itemid="george-michael"
                        data-testid="george-michael"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        George Michael
                      </p>
                    </div>
                  </div>
                </div>
              </article>
              <article
                className="emotion-70"
              >
                <div
                  className="emotion-49"
                >
                  <div
                    className="emotion-50"
                  >
                    <p
                      className="emotion-51"
                    >
                      Owned Composition
                    </p>
                    <div
                      className="emotion-52"
                    >
                      <span
                        className="emotion-8"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-54"
                        />
                      </span>
                      <div
                        className="emotion-77"
                      >
                        <h3
                          className="emotion-56"
                        >
                          Waiting for That Day
                        </h3>
                        <div
                          className="emotion-79"
                          data-testid="external-link-tooltip"
                          placement="right"
                        >
                          <a
                            className="emotion-80"
                            href="https://www.orfium.com"
                            rel="noreferrer"
                            target="_blank"
                          >
                            <span
                              className="emotion-8"
                              onClick={[Function]}
                            >
                              <span
                                className="emotion-82"
                              />
                            </span>
                          </a>
                        </div>
                        <div>
                          Open asset in MRC
                        </div>
                      </div>
                    </div>
                    <p
                      className="emotion-57"
                    >
                      ISWC: KS39729323
                    </p>
                  </div>
                  <div
                    className="emotion-58"
                  >
                    <p
                      className="emotion-59"
                    >
                      Linked Sound 
                      <br />
                       Recordings
                    </p>
                    <span
                      className="emotion-60"
                    >
                      234
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-61"
                >
                  <div
                    className="emotion-62"
                  >
                    <h4
                      className="emotion-63"
                    >
                      Writers
                    </h4>
                    <div
                      className="emotion-64"
                    >
                      <p
                        className=" emotion-65"
                        data-itemid="george-michael"
                        data-testid="george-michael"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        George Michael
                      </p>
                      <p
                        className=" emotion-92"
                        data-itemid="mick-jagger"
                        data-testid="mick-jagger"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        Mick Jagger
                      </p>
                      <p
                        className=" emotion-92"
                        data-itemid="keith-richards"
                        data-testid="keith-richards"
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                      >
                        Keith Richards
                      </p>
                    </div>
                  </div>
                </div>
              </article>
            </div>
          </div>
        </section>
      </div>
      <section
        className="emotion-13"
      >
        <div
          className="emotion-14"
        >
          <header
            className="emotion-15"
          >
            <div
              className="emotion-3"
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                  onClick={[Function]}
                >
                  <input
                    checked={false}
                    className="emotion-6"
                    data-testid="checkbox"
                    disabled={false}
                    id="styled-checkbox-"
                    onChange={[Function]}
                    onClick={[Function]}
                    type="checkbox"
                  />
                  <label
                    className="emotion-7"
                    htmlFor="styled-checkbox-"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-9"
                      />
                    </span>
                  </label>
                </span>
              </span>
              <div
                className="emotion-3"
              >
                <span
                  className="emotion-24"
                >
                  95%
                </span>
                <span
                  className="emotion-25"
                >
                  Probability
                  <br />
                   Score
                </span>
              </div>
            </div>
            <div
              className="emotion-12"
            >
              <div
                className="emotion-27"
              >
                <div
                  className="emotion-28"
                  data-testid="primary_action"
                >
                  <button
                    className="emotion-29"
                    data-testid="button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-30"
                    >
                      <span
                        className="emotion-31"
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-33"
                          />
                        </span>
                      </span>
                      <span
                        className="emotion-34"
                      >
                        Confirm
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  className="emotion-28"
                  data-testid="primary_action"
                >
                  <button
                    className="emotion-29"
                    data-testid="button"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-30"
                    >
                      <span
                        className="emotion-31"
                      >
                        <span
                          className="emotion-8"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-33"
                          />
                        </span>
                      </span>
                      <span
                        className="emotion-34"
                      >
                        Reject
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                role="button"
              >
                <div
                  className="emotion-42"
                >
                  <div
                    className="emotion-43"
                  >
                    <button
                      className="emotion-44"
                      data-testid="icon-button-menu_btn"
                      disabled={false}
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-8"
                        onClick={[Function]}
                      >
                        <span
                          className="emotion-46"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </header>
          <div
            className="emotion-47"
          >
            <article
              className="emotion-48"
            >
              <div
                className="emotion-49"
              >
                <div
                  className="emotion-50"
                >
                  <p
                    className="emotion-51"
                  >
                    Owned Recording
                  </p>
                  <div
                    className="emotion-52"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-54"
                      />
                    </span>
                    <div
                      className="emotion-55"
                    >
                      <h3
                        className="emotion-56"
                      >
                        Too Funky
                      </h3>
                    </div>
                  </div>
                  <p
                    className="emotion-57"
                  >
                    ISWC: KS39729323
                  </p>
                </div>
                <div
                  className="emotion-58"
                >
                  <p
                    className="emotion-59"
                  >
                    Linked Sound 
                    <br />
                     Recordings
                  </p>
                  <span
                    className="emotion-60"
                  >
                    234
                  </span>
                </div>
              </div>
              <div
                className="emotion-61"
              >
                <div
                  className="emotion-62"
                >
                  <h4
                    className="emotion-63"
                  >
                    Artists
                  </h4>
                  <div
                    className="emotion-64"
                  >
                    <p
                      className=" emotion-65"
                      data-itemid="george-michael"
                      data-testid="george-michael"
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                    >
                      George Michael
                    </p>
                  </div>
                </div>
                <div
                  className="emotion-66"
                >
                  <h4
                    className="emotion-63"
                  >
                    Writers
                  </h4>
                  <div
                    className="emotion-64"
                  >
                    <p
                      className=" emotion-65"
                      data-itemid="george-michael"
                      data-testid="george-michael"
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                    >
                      George Michael
                    </p>
                  </div>
                </div>
              </div>
            </article>
            <article
              className="emotion-70"
            >
              <div
                className="emotion-49"
              >
                <div
                  className="emotion-50"
                >
                  <p
                    className="emotion-51"
                  >
                    Owned Composition
                  </p>
                  <div
                    className="emotion-52"
                  >
                    <span
                      className="emotion-8"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-54"
                      />
                    </span>
                    <div
                      className="emotion-77"
                    >
                      <h3
                        className="emotion-56"
                      >
                        Waiting for That Day
                      </h3>
                      <div
                        className="emotion-79"
                        data-testid="external-link-tooltip"
                        placement="right"
                      >
                        <a
                          className="emotion-80"
                          href="https://www.orfium.com"
                          rel="noreferrer"
                          target="_blank"
                        >
                          <span
                            className="emotion-8"
                            onClick={[Function]}
                          >
                            <span
                              className="emotion-82"
                            />
                          </span>
                        </a>
                      </div>
                      <div>
                        Open asset in MRC
                      </div>
                    </div>
                  </div>
                  <p
                    className="emotion-57"
                  >
                    ISWC: KS39729323
                  </p>
                </div>
                <div
                  className="emotion-58"
                >
                  <p
                    className="emotion-59"
                  >
                    Linked Sound 
                    <br />
                     Recordings
                  </p>
                  <span
                    className="emotion-60"
                  >
                    234
                  </span>
                </div>
              </div>
              <div
                className="emotion-61"
              >
                <div
                  className="emotion-62"
                >
                  <h4
                    className="emotion-63"
                  >
                    Writers
                  </h4>
                  <div
                    className="emotion-64"
                  >
                    <p
                      className=" emotion-65"
                      data-itemid="george-michael"
                      data-testid="george-michael"
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                    >
                      George Michael
                    </p>
                    <p
                      className=" emotion-92"
                      data-itemid="mick-jagger"
                      data-testid="mick-jagger"
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                    >
                      Mick Jagger
                    </p>
                    <p
                      className=" emotion-92"
                      data-itemid="keith-richards"
                      data-testid="keith-richards"
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                    >
                      Keith Richards
                    </p>
                  </div>
                </div>
              </div>
            </article>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Asset Matching SectionHeader 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  margin-top: 0.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: space-between;
  -webkit-box-align: space-between;
  -ms-flex-align: space-between;
  align-items: space-between;
  width: 100%;
  text-align: center;
}

.emotion-2 {
  padding: 0.5rem;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  background: transparent;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0px 0px 0px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-5:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-6 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-6+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-6+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #cfcfcf;
  border-radius: 0.125rem;
}

.emotion-6:disabled+label {
  cursor: not-allowed;
}

.emotion-7 span {
  padding: 0;
}

.emotion-7 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #c8cade;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-9 path {
  fill: #c8cade;
}

.emotion-11 {
  color: black;
}

.emotion-12 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  margin-right: 0.5rem;
}

.emotion-14>button {
  border: none;
}

.emotion-15 {
  font-size: 1rem;
  font-weight: 500;
  color: #000;
  background-color: #3e3e3e;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  opacity: 1;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-15:hover,
.emotion-15:focus {
  background-color: #585858;
}

.emotion-15:active {
  background-color: #717171;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-19 {
  fill: inherit;
  width: 1rem;
  height: 1rem;
}

.emotion-19 path {
  fill: inherit;
}

.emotion-20 {
  margin-left: 0.5rem;
  margin-right: 0;
}

.emotion-28 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-29 {
  margin-right: 0.5rem;
}

.emotion-29>button {
  border: none;
}

.emotion-30 {
  font-size: 1rem;
  font-weight: 500;
  width: 2.875rem;
  color: #000;
  background-color: transparent;
  padding: 0;
  height: 2.875rem;
  opacity: 1;
  border-radius: 100%;
  border: solid 1px rgba(0,0,0,0.5);
  cursor: pointer;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-30:hover,
.emotion-30:focus {
  background-color: rgba(0,0,0,0.1);
}

.emotion-30:active {
  background-color: rgba(0,0,0,0.2);
}

.emotion-32 {
  fill: #000;
  width: 1rem;
  height: 1rem;
}

.emotion-32 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <h2>
      ⬇️Header section can be used separately for handling bulk actions⬇️
    </h2>
    <header
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <span
          className="emotion-4"
        >
          <span
            className="emotion-5"
            onClick={[Function]}
          >
            <input
              checked={false}
              className="emotion-6"
              data-testid="checkbox"
              disabled={false}
              id="styled-checkbox-"
              onChange={[Function]}
              onClick={[Function]}
              type="checkbox"
            />
            <label
              className="emotion-7"
              htmlFor="styled-checkbox-"
            >
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
            </label>
          </span>
        </span>
        <div
          className="emotion-3"
        >
          <span
            className="emotion-11"
          >
            2 items selected
          </span>
        </div>
      </div>
      <div
        className="emotion-12"
      >
        <div
          className="emotion-13"
        >
          <div
            className="emotion-14"
            data-testid="primary_action"
          >
            <button
              className="emotion-15"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-16"
              >
                <span
                  className="emotion-17"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-19"
                    />
                  </span>
                </span>
                <span
                  className="emotion-20"
                >
                  Confirm
                </span>
              </span>
            </button>
          </div>
          <div
            className="emotion-14"
            data-testid="primary_action"
          >
            <button
              className="emotion-15"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-16"
              >
                <span
                  className="emotion-17"
                >
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-19"
                    />
                  </span>
                </span>
                <span
                  className="emotion-20"
                >
                  Reject
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          role="button"
        >
          <div
            className="emotion-28"
          >
            <div
              className="emotion-29"
            >
              <button
                className="emotion-30"
                data-testid="icon-button-menu_btn"
                disabled={false}
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-32"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;
